# taskie-todo-app

./: .gitignore  BACKEND_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_REMEDIATION_SUMMARY.md
.claude/skills/database-schema/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  .env.template  QUICKSTART.md  README.md  main.py  requirements.txt
backend/src/: database.py  models.py  schemas.py  services.py
backend/src/api/: tasks.py
backend/src/auth/: auth_context.py  (+5 more)
backend/tests/: conftest.py  test_api.py  test_services.py
frontend/: .env.template
phase_01/: CLAUDE.md
phase_01/src/: cli.py  main.py  models.py  service.py  storage.py
phase_03/: README.md  alembic.ini  package-lock.json
phase_03/agent-service/: .env.example  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  pyproject.toml
phase_03/agent-service/agent_service_impl/: config.py
phase_03/agent-service/agent_service_impl/handlers/: __init__.py  intent_handler.py  parameter_extractor.py  status_filter_handler.py
phase_03/agent-service/agent_service_impl/prompts/: confirmation_patterns.md  system_prompt.md
phase_03/agent-service/agent_service_impl/tools/: response_formatter.py
phase_03/agent-service/tests/: test_agent_basic.py  test_delete_task_agent.py  test_update_task_agent.py
phase_03/agent-service/tests/fixtures/: mock_mcp_tools.py  sample_commands.py
phase_03/backend/: .env.example  AUTH_IMPLEMENTATION_GUIDE.md  DATABASE_IMPLEMENTATION_SUMMARY.md  alembic.ini  main.py  reset_db.py
phase_03/frontend/: .env.example  .eslintrc.json  README.md  color-guide.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
phase_03/mcp-server/: pyproject.toml
phase_03/mcp-server/src/db/: connection.py
phase_03/mcp-server/src/errors/: handlers.py
phase_03/mcp-server/src/models/: schemas.py  task.py
phase_03/mcp-server/src/tools/: add_task.py  delete_task.py  list_tasks.py
phase_03/mcp-server/tests/: test_complete_task.py  test_delete_task.py
phase_03/scripts/: load_test.py
phase_03/tests/: conftest.py  test_chat_endpoint.py  test_chat_interface_ui.py  test_performance.py
phase_04/: DEPLOYMENT_SUMMARY.md  HELM_DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.txt  logs.sh  restart-local.sh  start-local.sh  stop-local.sh
phase_04/agent-service/: .env.example  .gitignore  Makefile  requirements.txt  setup.py
phase_04/alembic/: env.py
phase_04/backend/: NEON_CONFIGURATION.md  README.md  requirements.txt
phase_04/mcp-server/: .env.example  IMPLEMENTATION_COMPLETE.md  README.md  TEST_REPORT.md  requirements.txt
phase_04/tests/: test_concurrency.py  test_conversation_continuation.py  test_history_service.py  test_statelessness.py
phase_04/todo-chatbot/: Chart.yaml  README.md  values-minikube.yaml  values.yaml
specs/001-backend-api/: data-model.md  research.md
specs/002-authentication-jwt/: ARCHITECTURE.md  spec.md  tasks.md
specs/003-frontend-nextjs/: plan.md  tasks.md
(+267 files in other folders)
